# 2022-advent-of-code

./: .prettierrc  .rubocop.yml  Gemfile  README.md  RESULTS.md  package.json  pnpm-lock.yaml  pyproject.toml  requirements.txt  tsconfig.json
benchmark/: benchmark.js  benchmark.py  benchmark.rb  benchmark.ts  compileResults.js  compileResults.ts
day_1/puzzle_1/: solve.js  solve.py  solve.rb  solve.ts
day_1/puzzle_2/: solve.js  solve.py  solve.rb  solve.ts
day_10/puzzle_1/: solve.js  solve.py  solve.rb  solve.ts
day_10/puzzle_2/: solve.js  solve.py  solve.rb  (+1 more)
results/: day_10_puzzle_1_py.json  day_10_puzzle_1_rb.json  day_10_puzzle_1_ts.json  day_10_puzzle_2_py.json  day_1_puzzle_1_py.json  day_1_puzzle_1_rb.json  day_1_puzzle_1_ts.json  day_1_puzzle_2_py.json  day_1_puzzle_2_rb.json  day_1_puzzle_2_ts.json  day_2_puzzle_1_py.json  day_2_puzzle_1_rb.json  day_2_puzzle_1_ts.json  day_2_puzzle_2_py.json  day_2_puzzle_2_rb.json  day_2_puzzle_2_ts.json  day_3_puzzle_1_py.json  day_3_puzzle_1_rb.json  day_3_puzzle_1_ts.json  day_3_puzzle_2_py.json  day_3_puzzle_2_rb.json  day_3_puzzle_2_ts.json  day_4_puzzle_1_py.json  day_4_puzzle_1_rb.json  day_4_puzzle_1_ts.json  day_4_puzzle_2_py.json  day_4_puzzle_2_rb.json  day_4_puzzle_2_ts.json  day_5_puzzle_1_py.json  day_5_puzzle_1_rb.json  day_5_puzzle_1_ts.json  day_5_puzzle_2_py.json  day_5_puzzle_2_rb.json  day_5_puzzle_2_ts.json  day_6_puzzle_1_py.json  day_6_puzzle_1_rb.json  day_6_puzzle_1_ts.json  day_6_puzzle_2_py.json  day_6_puzzle_2_rb.json  day_6_puzzle_2_ts.json  (+18 more)
scripts/: compileResults.js  compileResults.ts
(+64 files in other folders)
