[tool.poetry]
name = "2022-advent-of-code"
version = "0.1.0"
description = ""
authors = ["jakebottrall <jakebottrall@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.dev.dependencies]
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
